@@ -8,13 +8,13 @@
 # See the file "COPYING" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# @(#) $Id: Makefile.am,v 1.6 1999/06/07 15:44:10 strauss Exp $
+# @(#) $Id: Makefile.am,v 1.7 1999/06/15 14:09:45 strauss Exp $
 #
 
 INCLUDES		= -I../lib
 
 EXTRA_DIST		= dump-smi.h dump-sming.h dump-data.h dump-imports.h \
-			  dump-mosy.h dump-java.h $(man_MANS)
+			  dump-mosy.h dump-java.h dump-jdmk.h $(man_MANS)
 
 bin_PROGRAMS		= smiquery smilint smidump
 
@@ -27,6 +27,7 @@ smilint_SOURCES		= smilint.c
 smilint_LDADD		= ../lib/libsmi.la
 
 smidump_SOURCES		= smidump.c dump-sming.c dump-smi.c \
-			  dump-data.c dump-imports.c dump-mosy.c dump-java.c
+			  dump-data.c dump-imports.c dump-mosy.c \
+			  dump-java.c dump-jdmk.c
 smidump_LDADD		= ../lib/libsmi.la
 
